--- a/.env
+++ b/.env
@@ -1,3 +1,4 @@
-GEMINI_API_KEY=AIzaSyBbBQ3aOVjTwTf3rMdxqFrsF4HZfzd85fY
+﻿GEMINI_API_KEY=AIzaSyBbBQ3aOVjTwTf3rMdxqFrsF4HZfzd85fY
+VITE_GEMINI_API_KEY=AIzaSyBbBQ3aOVjTwTf3rMdxqFrsF4HZfzd85fY
 PORT=3001
 VITE_API_BASE_URL=http://localhost:3001
