google map navigation

--- a/.env
+++ b/.env
@@ -2,3 +2,4 @@
 VITE_GEMINI_API_KEY=AIzaSyBbBQ3aOVjTwTf3rMdxqFrsF4HZfzd85fY
 PORT=3001
 VITE_API_BASE_URL=http://localhost:3001
+GOOGLE_MAPS_API_KEY=AIzaSyBYMfosVUvmy7VgucD7LISjB3mhve3hkG4
