--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "@google/generative-ai": "^0.24.1",
     "@stomp/stompjs": "^7.2.1",
+    "@zegocloud/zego-uikit-prebuilt": "^2.17.1",
     "axios": "^1.13.2",
     "concurrently": "^9.2.1",
     "cors": "^2.8.5",
@@ -41,6 +42,7 @@
     "@types/react-dom": "^19.1.7",
     "@vitejs/plugin-react": "^5.0.0",
     "autoprefixer": "^10.4.21",
+    "baseline-browser-mapping": "^2.9.5",
     "eslint": "^9.33.0",
     "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-react-refresh": "^0.4.20",
